# Snake-with-SDL2-cpp

./: CMakeLists.txt  main.cpp
Textures/: textures.txt
cmake/: FindSDL2.cmake
include/: AudioManager.h  FontManager.h  Fruit.h  GameManager.h  GameObject.h  InputManager.h  Map.h  ScoreManager.h  Snake.h  StateInterface.h  TextureManager.h
include/GameStates/: EndState.h  MainState.h  StartState.h  StateInterface.h
maps/: lvl1.txt  lvl2.txt
res/maps/: lvl3.cfg
res/scores/: scores.txt
res/textures/: textures.txt
scores/: scores.txt
src/: AudioManager.cpp  FontManager.cpp  Fruit.cpp  GameManager.cpp  GameObject.cpp  InputManager.cpp  Map.cpp  ScoreManager.cpp  Snake.cpp  StateInterface.cpp  TextureManager.cpp
src/GameStates/: EndState.cpp  MainState.cpp  StartState.cpp
